Adding support for Linux

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ set(TOOLS_DIR "${MAIN_DIR}/tools")
 option(SITL "SITL build for host system" OFF)
 
 set(TOOLCHAIN_OPTIONS none arm-none-eabi host)
-if (SITL)
+if (SITL OR LINUX)
     if (CMAKE_HOST_APPLE)
         set(MACOSX TRUE)
     endif()
@@ -43,7 +43,7 @@ include(settings)
 if(TOOLCHAIN STREQUAL none)
     add_subdirectory(src/test)
 else()
-    if (SITL)
+    if (SITL OR LINUX)
         include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/${TOOLCHAIN}.cmake")
     else()
         set(CMAKE_TOOLCHAIN_FILE "${CMAKE_CURRENT_SOURCE_DIR}/cmake/${TOOLCHAIN}.cmake")
@@ -62,7 +62,7 @@ else()
 endif()
 set(CMAKE_C_EXTENSIONS ON)
 set(CMAKE_C_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_EXTENSIONS ON)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
@@ -82,7 +82,7 @@ set(COMMON_COMPILE_DEFINITIONS
     FC_VERSION_TYPE="${VERSION_TYPE}"
 )
 
-if (NOT SITL)
+if (NOT SITL AND NOT LINUX)
     include(openocd)
     include(svd)
 endif()
@@ -90,6 +90,7 @@ endif()
 include(stm32)
 include(at32)
 include(sitl)
+include(linux)
 
 add_subdirectory(src)
 
